test/parser.d/invalid/typedef-struct-2.surc.bad
def struct NonEmptyIntList = { non_empty_int_list }
